adding card and payment option

--- a/templates/App_Shop/home.html
+++ b/templates/App_Shop/home.html
@@ -382,7 +382,7 @@
          </div>
       </div>
          <div class="card card-hov">
-            <a href="#"  class="btn btn-bf"><i class="ion-ios-cart"></i>&nbsp; ADD TO CART</a>
+            <a href="{% url 'App_Order:add' pk=product.pk %}"  class="btn btn-bf"><i class="ion-ios-cart"></i>&nbsp; ADD TO CART</a>
          
          </div>
 
@@ -429,7 +429,7 @@
          </div>
       </div>
          <div class="card card-hov">
-            <a href="#"  class="btn btn-bf"><i class="ion-ios-cart"></i>&nbsp; ADD TO CART</a>
+            <a href="{% url 'App_Order:add' pk=product.pk %}"  class="btn btn-bf"><i class="ion-ios-cart"></i>&nbsp; ADD TO CART</a>
 
          </div>
 
