--- a/templates/App_Login/sign_up.html
+++ b/templates/App_Login/sign_up.html
@@ -1,45 +1,13 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
-{% block title_block %} <p>ecommerce register</p> {% endblock %}
-
-
-{% block css_block %}
-<style>
-    .cart-full{
-       background-color: #E8E8E8;
-    }
-    .sign-up {
-       background-color: #F0F0F0;
-       width:500px;
-       border: 1px solid #ccc;
-       padding: 50px;
-    }
-    .log-in {
-       background-color: #F0F0F0;
-       width: 500px;
-       border: 1px solid #ccc;
-       padding: 15px 50px 0px 50px ;
-    }
-</style>
-
-{% endblock %}
-
-
-
+{% block title_block %} Create New Account {% endblock %}
 {% block body_block %}
-
-<center class="cart-full">
-    <div class="sign-up">
-       <h2>Create New Account</h2>
-       <form method="POST">
-           {{ form|crispy }}
-           {% csrf_token %}
-           <button type="submit" class="btn btn-success btn-sm">Create Account</button>
-       </form>
-    </div>
-    <div class="log-in">
-       <P>Already have an account? <a href="{% url 'App_Login:login' %}">Login Here</a></P>
-    </div>
-</center>
-
+<h2>Create New Account:</h2>
+<form method="POST">
+{{ form|crispy }}
+{% csrf_token %}
+<button type="submit" class="btn btn-success btn-sm">Create Account</button>
+</form>
+<br>
+<p>Already have an account? <a href="{% url 'App_Login:login' %}">Login Here</a></p>
 {% endblock %}
