--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,244 +1,39 @@
 {% load cart_tag %}
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container">
+    <a class="navbar-brand" href="{% url 'App_Shop:home' %}">Django E-commerce Project</a>
+    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        {% if request.user.is_authenticated %}
+        <li class="nav-item">
+          <a href="{% url 'App_Order:cart' %}" class="nav-link">
+              <i class="fa fa-shopping-cart"></i> Cart
+              <span class="badge badge-light">{{ request.user | cart_total }}</span>
+          </a>
+        </li>
+        <li class="nav-item">
 
-       <style>
-       ul, ol {
-           margin: 0;
-           padding: 0;
-           list-style: none;
-       }
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user-tie"></i> {{request.user.profile.username}}</a>
+          <div class="dropdown-menu" aria-labelledby="nabbarDropdown">
+            <a class="dropdown-item" href="{% url 'App_Login:profile' %}">Profile</a>
 
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="{% url 'App_Payment:orders' %}">Order</a>
 
-       #top-header{
-           background-color: #1E1F29;
-           padding-top: 5px;
-           padding-bottom: 30px;
-
-       }
-
-       .header-links li {
-           margin-right: 15px;
-           display: inline-block;
-           font-size: 12px;
-       }
-       .header-links li:last-child {
-           margin-right: 0px;
-       }
-
-       .header-links a{
-           text-decoration: none;
-           color: #FFFFFF;
-           font-weight: 500px;
-       }
-       .header-links a:hover{
-           color: #D10024;
-       }
-       .header-links i {
-           color: #D10024;
-           font-size: 13px;
-           margin-right: 5px;
-       }
-
-
-       #header{
-           padding-top: 20px;
-           padding-bottom: 20px;
-           background-color: #15161D;
-       }
-       .header-search{
-           padding: 15px 0px;
-       }
-
-
-
-       .header-search form .input-select{
-           margin-right: -4px;
-           border-radius: 40px 0px 0px 40px;
-           height: 40px;
-           width: 140px;
-           border: none;
-       }
-       .header-search form .input {
-            width: calc(100% - 260px);
-            margin-right: -5px;
-            height: 40px;
-            border: none;
-       }
-
-       .header-search form .search-btn {
-            border-radius: 0px 40px 40px 0px;
-            height: 40px;
-            width: 100px;
-            background-color: #D10024;
-            border: none;
-            color: #FFFFFF;
-            font-weight: 700;
-       }
-
-
-       .header-ctn{
-            padding: 15px 0px;
-            float: right;
-       }
-       .header-ctn>div{
-            display: inline-block;
-       }
-       .header-ctn>div+div {
-            margin-left: 15px;
-        }
-       .header-ctn>div>a{
-            display: block;
-            position: relative;
-            width: 90px;
-            text-align: center;
-            color: #FFF;
-            text-decoration: none;
-       }
-       .header-ctn>div>a>i{
-            display: inline-block;
-            font-size: 18px;
-       }
-       .header-ctn>div>a>span {
-           font-size: 12px;
-           font-weight: 550;
-       }
-       .qty {
-           position: absolute;
-           right: 20px;
-           top: -10px;
-           width: 20px;
-           height: 20px;
-           line-height: 20px;
-           text-align: center;
-           border-radius: 50%;
-           font-size: 10px;
-           color: #FFF;
-           background-color: #D10024;
-       }
-       .dropdown-cart{
-           display: inline-block;
-       }
-       .dropdown-cart>a>i{
-            display: inline-block;
-            font-size: 18px;
-       }
-       .dropdown-cart>a{
-           display: block;
-           color: #FFF;
-           text-decoration: none;
-           text-align:center;
-       }
-       .dropdown-cart>a>span{
-           font-size: 12px;
-           font-weight: 550;
-       }
-       .dropdown-cart>a>.qty{
-           top: 5px;
-       }
-
-
-
-       </style>
-
-
-
-<!--            top-header-->
-             <div id="top-header">
-                 <div class="container">
-                      <ul class="header-links float-left">
-                          <li><i class="ion-ios-telephone"></i><a href="#"> +021-95-51-84</a></li>
-                          <li><i class="ion-android-mail"></i><a href="#"> email@gmail.com</a></li>
-                          <li><i class="ion-ios-location"></i><a href="#"> 1734 Stonecoal Road</a></li>
-                      </ul>
-                      <ul class="header-links float-right">
-						  <li><a href="#"><i class="ion-social-usd"></i> USD</a></li>
-						  <li><a href="#"><i class="ion-android-person"></i> My Account</a></li>
-					  </ul>
-                 </div>
-             </div>
-<!--            /top-header-->
-<!--            header-->
-             <div id="header">
-                 <div class="container">
-                     <div class="row">
-<!--                         logo-->
-                         <div class="col-md-3">
-                             <div class="header-logo">
-                                 <a href="#" class="logo">
-                                     <img src="media/static_img/logo.png" alt="logo img">
-                                 </a>
-                             </div>
-                         </div>
-<!--                         /logo-->
-<!--                         header-search-->
-                         <div class="col-md-6">
-                             <div class="header-search">
-                                 <form>
-                                     <select class="input-select">
-                                         <option value="0">All Category</option>
-                                         <option value="1">Category01</option>
-                                         <option value="2">Category02</option>
-                                     </select>
-                                     <input class="input" placeholder=" search here">
-                                     <button class="search-btn">Search</button>
-                                 </form>
-
-                             </div>
-                         </div>
-<!--                         /header-search-->
-                         <div class="col-md-3">
-                             <div class="header-ctn">
-<!--                                 wishlist-->
-                                 <div>
-                                     <a href="#">
-                                         <i class="ion-ios-heart-outline"></i>
-                                         <br>
-                                         <span>Your Wishlist</span>
-                                         <div class="qty">2</div>
-                                     </a>
-                                 </div>
-                                 <div>
-                                      <div class="dropdown-cart">
-                                           <a href="{% url 'App_Order:cart' %}" class="toggle-menu">
-                                                <i class="ion-ios-cart"></i>
-                                                <br>
-                                                <span>Your Cart</span>
-                                               {% if request.user.is_authenticated %}
-                                                <div class="qty">{{request.user | cart_total}}</div>
-                                               {% endif %}
-                                           </a>
-                                          <div class="menu-drawer">
-
-<!--                                              <ul>-->
-<!--                                                 <li><a href="#">Home</a></li>-->
-<!--                                                 <li><a href="#">About</a></li>-->
-<!--                                                  <li><a href="#">Contact</a></li>-->
-<!--                                              </ul>-->
-                                          </div>
-
-                                      </div>
-                                 </div>
-                             </div>
-
-                         </div>
-                     </div>
-                 </div>
-             </div>
-
-
-
-
-
-
-        <script src="js/main.js"></script>
-
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
-    <!-- jQuery Plugins -->
-		<!-- <script src="js/jquery.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
-		<script src="js/slick.min.js"></script>
-		<script src="js/nouislider.min.js"></script>
-		<script src="js/jquery.zoom.min.js"></script>
-		<script src="js/main.js"></script> -->
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="{% url 'App_Login:logout' %}">Logout</a>
+          </div>
+        </li>
+        {% else %}
+        <li class="nav-item">
+          <a href="{% url 'App_Login:login' %}" class="btn btn-primary">Login</a>
+        </li>
+        {% endif %}
+      </ul>
+    </div>
+  </div>
+</nav>
