--- a/templates/base.html
+++ b/templates/base.html
@@ -1,95 +1,206 @@
-{% load static %}
 <!DOCTYPE html>
-
 <html lang="en" dir="ltr">
   <head>
-     <meta charset="utf-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css" rel="stylesheet">
-     <link rel="stylesheet" href="{% static 'css/main.css' %}">
-      <title>{% block title_block %} E-com | Bohubrihi {% endblock %}</title>
+      <meta charset="utf-8">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-      <style>
-  .card {
-    height: 350px;
-  }
+      <!-- icon https://ionicons.com/v2/ -->
+       <link rel="stylesheet"  href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+<!--      font-awesome-->
+      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css" rel="stylesheet">
+<!--      slick link-> https://cdnjs.com/libraries/slick-carousel/1.6.0-->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" integrity="sha512-L/EyzxvZCddd652hKB4w2gEaZgCZSOaH0Ia6JoEGysTu27VnWvej5ipuBnru/iDhPWMO0AvwiVd0HHVUHWeDRA==" crossorigin="anonymous" />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" integrity="sha512-0OCvzZyRsIJ9Rg7O1S+Wf9ucukmVhyOg3h5eBG05aeH4NjG78fCEaEX3ofvndmukzENiX24fK5X/jPr6Y8yIdg==" crossorigin="anonymous" />
 
-  .card-product:after {
-    content: "";
-    display: table;
-    clear: both;
-    visibility: hidden;
-  }
-  .card-product .price-new, .card-product .price {
-    margin-right: 5px;
-  }
 
-  .card-product .price-old {
-    color: #999;
-  }
+      <title>{% block title_block %}  {% endblock %}</title>
 
-  .card-product .img-wrap {
-    border-radius: 3px 3px 0 0;
-    overflow: hidden;
-    position: relative;
-    height: 220px;
-    text-align: center;
-  }
+      {% block css_block %}
+      {% endblock %}
 
-  .card-product .img-wrap img {
-    max-height: 100%;
-    max-width: 100%;
-    object-fit: cover;
-  }
-
-  .card-product .info-wrap {
-    overflow: hidden;
-    padding: 15px;
-    border-top: 1px solid #eee;
-  }
-
-  .card-product .action-wrap {
-    padding-top: 4px;
-    margin-top: 4px;
-  }
-
-  .card-product .bottom-wrap {
-    padding: 15px;
-    border-top: 1px solid #eee;
-  }
-
-  .card-product .title {
-    margin-top: 0px;
-  }
-
-  </style>
   </head>
+
   <body>
   {% include 'navbar.html' %}
-  <div class="container">
-      <div class="messages container mt-2">
-      {% if messages %}
-        {% for message in messages %}
-          <div {% if message.tags %} class="alert alert-{{message.tags}}{% endif %}" role="alert">
-            {{message}}
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          </div>
-        {% endfor %}
-      {% endif %}
-    </div>
-
-    {% block body_block %} {% endblock %}
-
-  </div>
+     <div class="container" style="padding-top:25px">
+         {% block body_block %} {% endblock %}
+     </div>
 
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<!--      jquary cndn for slick  link-> https://www.w3schools.com/jquery/jquery_get_started.asp    -->
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<!--      link -> https://cdnjs.com/libraries/slick-carousel/1.6.0-->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.js" integrity="sha512-An4a3FEMyR5BbO9CRQQqgsBscxjM7uNNmccUSESNVtWn53EWx5B9oO7RVnPvPG6EcYcYPp0Gv3i/QQ4KUzB5WA==" crossorigin="anonymous"></script>
 
-</body>
+<!--     top sell-->
+     <script type="text/javascript">
+          $('.slider').slick({
+                dots: true,
+                infinite: true,
+                speed: 300,
+                slidesToShow: 4,
+                slidesToScroll: 1,
+                autoplay: true,
+                autoplaySpeed: 2000,
 
+                responsive: [
+                  {
+                    breakpoint: 1024,
+                    settings: {
+                      slidesToShow: 3,
+                      slidesToScroll: 3,
+                      infinite: true,
+                      dots: true
+                    }
+                  },
+                 {
+                   breakpoint: 600,
+                   settings: {
+                     slidesToShow: 2,
+                     slidesToScroll: 2
+                   }
+                 },
+                 {
+                    breakpoint: 480,
+                    settings: {
+                      slidesToShow: 1,
+                      slidesToScroll: 1
+                    }
+                 }
+<!--    // You can unslick at a given breakpoint now by adding:-->
+<!--    // settings: "unslick"-->
+<!--    // instead of a settings object-->
+               ]
+         });
+      </script>
+<!--  top sell sub-section1-->
+    <script type="text/javascript">
+          $('.slider-top-sell-sub1').slick({
+<!--                dots: true,-->
+                infinite: true,
+                speed: 300,
+                slidesToShow: 1,
+                slidesToScroll: 1,
+                prevArrow: $('.prev1'),
+                nextArrow: $('.next1'),
+                autoplay: true,
+                autoplaySpeed: 2000,
+
+                responsive: [
+                  {
+                    breakpoint: 1024,
+                    settings: {
+                      slidesToShow: 3,
+                      slidesToScroll: 3,
+                      infinite: true,
+                      dots: true
+                    }
+                  },
+                 {
+                   breakpoint: 600,
+                   settings: {
+                     slidesToShow: 2,
+                     slidesToScroll: 2
+                   }
+                 },
+                 {
+                    breakpoint: 480,
+                    settings: {
+                      slidesToShow: 1,
+                      slidesToScroll: 1
+                    }
+                 }
+
+               ]
+         });
+      </script>
+<!--  top sell sub-section2-->
+    <script type="text/javascript">
+          $('.slider-top-sell-sub2').slick({
+<!--                dots: true,-->
+                infinite: true,
+                speed: 300,
+                slidesToShow: 1,
+                slidesToScroll: 1,
+                prevArrow: $('.prev2'),
+                nextArrow: $('.next2'),
+                autoplay: true,
+                autoplaySpeed: 2010,
+
+                responsive: [
+                  {
+                    breakpoint: 1024,
+                    settings: {
+                      slidesToShow: 3,
+                      slidesToScroll: 3,
+                      infinite: true,
+                      dots: true
+                    }
+                  },
+                 {
+                   breakpoint: 600,
+                   settings: {
+                     slidesToShow: 2,
+                     slidesToScroll: 2
+                   }
+                 },
+                 {
+                    breakpoint: 480,
+                    settings: {
+                      slidesToShow: 1,
+                      slidesToScroll: 1
+                    }
+                 }
+
+               ]
+         });
+      </script>
+  <!--  top sell sub-section3-->
+    <script type="text/javascript">
+          $('.slider-top-sell-sub3').slick({
+<!--                dots: true,-->
+                infinite: true,
+                speed: 300,
+                slidesToShow: 1,
+                slidesToScroll: 1,
+                prevArrow: $('.prev3'),
+                nextArrow: $('.next3'),
+                autoplay: true,
+                autoplaySpeed: 2000,
+
+                responsive: [
+                  {
+                    breakpoint: 1024,
+                    settings: {
+                      slidesToShow: 3,
+                      slidesToScroll: 3,
+                      infinite: true,
+                      dots: true
+                    }
+                  },
+                 {
+                   breakpoint: 600,
+                   settings: {
+                     slidesToShow: 2,
+                     slidesToScroll: 2
+                   }
+                 },
+                 {
+                    breakpoint: 480,
+                    settings: {
+                      slidesToShow: 1,
+                      slidesToScroll: 1
+                    }
+                 }
+
+               ]
+         });
+      </script>
+
+
+
+  </body>
 </html>
-
